[metadata]
name = cliff
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Command Line Interface Formulation Framework
home-page = https://launchpad.net/python-cliff
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cliff

[entry_points]
cliff.formatter.list =
    table = cliff.formatters.table:TableFormatter
    csv = cliff.formatters.commaseparated:CSVLister
    value = cliff.formatters.value:ValueFormatter
    yaml = cliff.formatters.yaml_format:YAMLFormatter
    json = cliff.formatters.json_format:JSONFormatter

cliff.formatter.show =
    table = cliff.formatters.table:TableFormatter
    shell = cliff.formatters.shell:ShellFormatter
    value = cliff.formatters.value:ValueFormatter
    yaml = cliff.formatters.yaml_format:YAMLFormatter
    json = cliff.formatters.json_format:JSONFormatter

cliff.formatter.completion =
    bash = cliff.complete:CompleteBash
    none = cliff.complete:CompleteNoCode


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
