[metadata]
name = cliff
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Command Line Interface Formulation Framework
home_page = https://docs.openstack.org/cliff/latest/
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Environment :: Console

[files]
packages =
    cliff

[entry_points]
cliff.formatter.list =
    table = cliff.formatters.table:TableFormatter
    csv = cliff.formatters.commaseparated:CSVLister
    value = cliff.formatters.value:ValueFormatter
    yaml = cliff.formatters.yaml_format:YAMLFormatter
    json = cliff.formatters.json_format:JSONFormatter

cliff.formatter.show =
    table = cliff.formatters.table:TableFormatter
    shell = cliff.formatters.shell:ShellFormatter
    value = cliff.formatters.value:ValueFormatter
    yaml = cliff.formatters.yaml_format:YAMLFormatter
    json = cliff.formatters.json_format:JSONFormatter

cliff.formatter.completion =
    bash = cliff.complete:CompleteBash
    none = cliff.complete:CompleteNoCode

# NOTE(dhellmann): Duplicated from demoapp/setup.py for the
# documentation build.
cliff.demo =
    simple = cliffdemo.simple:Simple
    two_part = cliffdemo.simple:Simple
    error = cliffdemo.simple:Error
    list files = cliffdemo.list:Files
    files = cliffdemo.list:Files
    file = cliffdemo.show:File
    show file = cliffdemo.show:File
    unicode = cliffdemo.encoding:Encoding
    hooked = cliffdemo.hook:Hooked
cliff.demo.hooked =
    sample-hook = cliffdemo.hook:Hook

